Add meta data to head and connect css file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
+    <meta name="description" content="Dog grooming studio for dog owners in Kilkenny, Ireland">
+    <meta name="keywords" content="Dog Grooming Service, Dog Wash, Canine Clippers, Shedding Wash, Pawdicure, Puppy Bath, Kilkenny, Ireland">
+
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Good Boy Grooming Studios</title>
 </head>
 <body>
