Add main structure for landing page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <title>Good Boy Grooming Studios</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <header><h1>header content</h1></header>
+    <section>main image</section>
+    <section> About</section>
+    <section>Services list</section>
+    <section> Puppy Groom</section>
+    <footer>Social media links</footer>
 </body>
 </html>
