--- a/index.html
+++ b/index.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <meta name="description" content="Dog grooming studio for dog owners in Kilkenny, Ireland">
-    <meta name="keywords" content="Dog Grooming Service, Dog Wash, Canine Clippers, Shedding Wash, Pawdicure, Puppy Bath, Kilkenny, Ireland">
+    <meta name="keywords"
+        content="Dog Grooming Service, Dog Wash, Canine Clippers, Shedding Wash, Pawdicure, Puppy Bath, Kilkenny, Ireland">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Good Boy Grooming Studios</title>
 </head>
+
 <body>
-    <header><h1>header content</h1></header>
+    <header>
+        <a href="index.html">
+            <h1>Good Boy</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">About</a>
+                </li>
+                <li>
+                    <a href="#">Book App</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>main image</section>
     <section> About</section>
     <section>Services list</section>
     <section> Puppy Groom</section>
     <footer>Social media links</footer>
 </body>
+
 </html>
