--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <body>
     <header>
+        <nav class="navbar">
         <a href="index.html">
             <h1 id="logo">Good Boy</h1>
         </a>
-        <nav>
-            <ul>
+            <ul class="menu">
                 <li>
-                    <a href="index.html">About</a>
+                    <a class="active" href="index.html">About</a>
                 </li>
                 <li>
                     <a href="#">Book App</a>
