--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
             </ul>
         </nav>
     </header>
-    <section>main image</section>
+    <section id="hero-outer">
+        <div id="hero-image">
+
+        </div>
+    </section>
     <section> About</section>
     <section>Services list</section>
     <section> Puppy Groom</section>
