Add content and style about us section and about us image

--- a/index.html
+++ b/index.html
@@ -40,8 +40,26 @@
 
         </div>
     </section>
-    <section> About</section>
-    <section>Services list</section>
+    <section> 
+        <div class="flex-container">
+        <div id="about-us">
+            <h2> About Us</h2>
+            <p>Good Boy Grooming Studios has been caring for your furry friends since it's establishment in 2006.</p> 
+                <br>
+                
+                <p>We offer a number of top notch services to ensure your beloved pet is always looking, and feeling, their best.</p> 
+                <br>
+                <p>We cater to any and all breed size and have extensive knowledge on how to care for those pooches who are getting on in years or who may typically have some difficulty in a grooming environment. To enquire further about our range of services please contact us. Alternatively, to book an appointment for your dog please fill out an appointment form on the next page.
+                </p> 
+            </p>
+        </div>
+        <div id="about-image">
+        </div>
+    </div>
+    </section>
+    <section id="">
+        
+    </section>
     <section> Puppy Groom</section>
     <footer>Social media links</footer>
 </body>
