Add content and style services section and services image

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </section>
     <section> 
-        <div class="flex-container">
+        <div class="flex-container-left">
         <div id="about-us">
             <h2> About Us</h2>
             <p>Good Boy Grooming Studios has been caring for your furry friends since it's establishment in 2006.</p> 
@@ -57,7 +57,23 @@
         </div>
     </div>
     </section>
-    <section id="">
+    <section>
+    <div class="flex-container-right">
+        <div id="services">
+            <h2>Services</h2>
+            <ul id="services-list">
+                <li>Full Groom</li>
+                <li>De-Shedding Wash</li>
+                <li>Puppy's First Groom</li>
+                <li>Pawdicure (Nail Trim)</li>
+                <li>Everyday Coat Care</li>
+                <li>Doggy Dental</li>
+                <li>Please call to discuss our range of Wedding services</li>
+            </ul>
+        </div>
+        <div id="services-image"></div>
+    </div>
+       
         
     </section>
     <section> Puppy Groom</section>
