Add content and style puppy's first groom section and puppy bath image

--- a/index.html
+++ b/index.html
@@ -72,11 +72,21 @@
             </ul>
         </div>
         <div id="services-image"></div>
-    </div>
-       
-        
+    </div>    
     </section>
-    <section> Puppy Groom</section>
+    <section>
+        <div class="flex-container-left">
+            <div id="puppy-groom">
+                <h2> Puppy's First Groom</h2>
+                <p>
+                    There are many dogs who find the grooming process stressful. Often, this is because the first groom was a frightening experience. Here at Good Boy Grooming Studios we offer a Puppy's First Groom special to make that first grooming experience a positive one.
+                </p>
+                <br>
+                <p>The Puppy's First Groom package takes extra time for your pup to acclimate to the grooming studio and all its sounds and smells. The Puppy's First Groom package also includes the use of our whisper blow dryers and Puppy skin friendly shampoos</p>
+            </div>
+            <div id="puppy-bath-image">
+            </div>
+    </section>
     <footer>Social media links</footer>
 </body>
 
