--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     <header>
         <nav class="navbar">
         <a href="index.html">
-            <h1 id="logo">Good Boy</h1>
+            <h1 id="logo"><i class="fas fa-paw"></i>Good Boy<i class="fas fa-paw"></i></h1>
         </a>
             <ul class="menu">
                 <li>
-                    <a class="active" href="index.html">About</a>
+                    <a class="active" href="index.html">About<i class="fas fa-home"></i></a>
                 </li>
                 <li>
-                    <a href="#">Book App</a>
+                    <a href="#">Book App<i class="fas fa-calendar-alt"></i></a>
                 </li>
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="#">Gallery<i class="fas fa-images"></i></a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#">Contact<i class="fas fa-phone"></i></a>
                 </li>
             </ul>
         </nav>
