--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#">Book App<i class="fas fa-calendar-alt"></i></a>
                 </li>
                 <li>
-                    <a href="#">Gallery<i class="fas fa-images"></i></a>
+                    <a  class="active" href="gallery.html">Gallery<i class="fas fa-images"></i></a>
                 </li>
                 <li>
                     <a href="#">Contact<i class="fas fa-phone"></i></a>
