Add gallery images and masonry  styling

--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,17 @@
             </ul>
         </nav>
     </header>
-
+        <section id="photos">
+            <img src="assets/images/dog-brushing-teeth.jpeg" alt="A dog running with a brush in it's mouth">
+            <img src="assets/images/dog-chin-trim.jpeg" alt="A dog getting its chin hairs trimmed">
+            <img src="assets/images/dog-flower-collar.jpeg" alt="A dog with a flower collar">
+            <img src="assets/images/hair-brush.jpeg" alt="A dog getting its hair brushed">
+            <img src="assets/images/shampoo-dog.jpg" alt="A small dog with shampoo on it's head">
+            <img src="assets/images/dog-bed.jpeg" alt="A dog lying in a fluffy bed">
+            <img src="assets/images/shower-cap-dog.jpg" alt="A dog with a showercap and toothbrush">
+            <img src="assets/images/puppy-wink.jpeg" alt="A puppy winking">
+            <img src="assets/images/golden-retreiver.jpeg" alt="A happy golden retreiver">
+        </section>
     <footer>
         <ul class="social-media">
             <li>
