Add style to about us, services and puppy groom sections for max-width 1200px

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="flex-container-right">
         <div id="services">
             <h2>Services</h2>
-            <ul id="services-list">
+            <ul class="small-text" id="services-list">
                 <li>Full Groom</li>
                 <li>De-Shedding Wash</li>
                 <li>Puppy's First Groom</li>
@@ -76,7 +76,7 @@
     </section>
     <section>
         <div class="flex-container-left">
-            <div id="puppy-groom">
+            <div class="small-text" id="puppy-groom">
                 <h2> Puppy's First Groom</h2>
                 <p>
                     There are many dogs who find the grooming process stressful. Often, this is because the first groom was a frightening experience. Here at Good Boy Grooming Studios we offer a Puppy's First Groom special to make that first grooming experience a positive one.
