Fix padding on About Us, Services, Puppy Groom and footer social links

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     <header>
         <nav class="navbar">
-        <a href="index.html">
-            <h1 id="logo"><i class="fas fa-paw"></i>Good Boy<i class="fas fa-paw"></i></h1>
-        </a>
+            <a href="index.html">
+                <h1 id="logo"><i class="fas fa-paw"></i>Good Boy<i class="fas fa-paw"></i></h1>
+            </a>
             <ul class="menu">
                 <li>
                     <a class="active" href="index.html">About<i class="fas fa-home"></i></a>
@@ -27,7 +27,7 @@
                     <a href="#">Book App<i class="fas fa-calendar-alt"></i></a>
                 </li>
                 <li>
-                    <a  class="active" href="gallery.html">Gallery<i class="fas fa-images"></i></a>
+                    <a class="active" href="gallery.html">Gallery<i class="fas fa-images"></i></a>
                 </li>
                 <li>
                     <a href="#">Contact<i class="fas fa-phone"></i></a>
@@ -40,49 +40,58 @@
 
         </div>
     </section>
-    <section> 
+    <section>
         <div class="flex-container-left">
-        <div id="about-us">
-            <h2> About Us</h2>
-            <p>Good Boy Grooming Studios has been caring for your furry friends since it's establishment in 2006.</p> 
+            <div id="about-us">
+                <h2> About Us</h2>
+                <p>Good Boy Grooming Studios has been caring for your furry friends since it's establishment in 2006.
+                </p>
                 <br>
-                
-                <p>We offer a number of top notch services to ensure your beloved pet is always looking, and feeling, their best.</p> 
+
+                <p>We offer a number of top notch services to ensure your beloved pet is always looking, and feeling,
+                    their best.</p>
                 <br>
-                <p>We cater to any and all breed size and have extensive knowledge on how to care for those pooches who are getting on in years or who may typically have some difficulty in a grooming environment. To enquire further about our range of services please contact us. Alternatively, to book an appointment for your dog please fill out an appointment form on the next page.
-                </p> 
-            </p>
+                <p>We cater to any and all breed size and have extensive knowledge on how to care for those pooches who
+                    are getting on in years or who may typically have some difficulty in a grooming environment. To
+                    enquire further about our range of services please contact us. Alternatively, to book an appointment
+                    for your dog please fill out an appointment form on the next page.
+                </p>
+                </p>
+            </div>
+            <div id="about-image">
+            </div>
         </div>
-        <div id="about-image">
-        </div>
-    </div>
     </section>
     <section>
-    <div class="flex-container-right">
-        <div id="services">
-            <h2>Services</h2>
-            <ul class="small-text" id="services-list">
-                <li>Full Groom</li>
-                <li>De-Shedding Wash</li>
-                <li>Puppy's First Groom</li>
-                <li>Pawdicure (Nail Trim)</li>
-                <li>Everyday Coat Care</li>
-                <li>Doggy Dental</li>
-                <li>Please call to discuss our range of Wedding services</li>
-            </ul>
+        <div class="flex-container-right">
+            <div id="services">
+                <h2>Services</h2>
+                <ul class="small-text" id="services-list">
+                    <li>Full Groom</li>
+                    <li>De-Shedding Wash</li>
+                    <li>Puppy's First Groom</li>
+                    <li>Pawdicure (Nail Trim)</li>
+                    <li>Everyday Coat Care</li>
+                    <li>Doggy Dental</li>
+                    <li>Please call to discuss our range of Wedding services</li>
+                </ul>
+            </div>
+            <div id="services-image"></div>
         </div>
-        <div id="services-image"></div>
-    </div>    
     </section>
     <section>
         <div class="flex-container-left">
             <div class="small-text" id="puppy-groom">
                 <h2> Puppy's First Groom</h2>
                 <p>
-                    There are many dogs who find the grooming process stressful. Often, this is because the first groom was a frightening experience. Here at Good Boy Grooming Studios we offer a Puppy's First Groom special to make that first grooming experience a positive one.
+                    There are many dogs who find the grooming process stressful. Often, this is because the first groom
+                    was a frightening experience. Here at Good Boy Grooming Studios we offer a Puppy's First Groom
+                    special to make that first grooming experience a positive one.
                 </p>
                 <br>
-                <p>The Puppy's First Groom package takes extra time for your pup to acclimate to the grooming studio and all its sounds and smells. The Puppy's First Groom package also includes the use of our whisper blow dryers and Puppy skin friendly shampoos</p>
+                <p>The Puppy's First Groom package takes extra time for your pup to acclimate to the grooming studio and
+                    all its sounds and smells. The Puppy's First Groom package also includes the use of our whisper blow
+                    dryers and Puppy skin friendly shampoos</p>
             </div>
             <div id="puppy-bath-image">
             </div>
@@ -90,17 +99,21 @@
     <footer>
         <ul class="social-media">
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i>
                 </a>
             </li>
             <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter"></i></a>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
             </li>
         </ul>
     </footer>
