--- a/gallery.html
+++ b/gallery.html
@@ -16,9 +16,9 @@
 <body>
     <header>
         <nav class="navbar">
-        <a href="index.html">
-            <h1 id="logo"><i class="fas fa-paw"></i>Good Boy<i class="fas fa-paw"></i></h1>
-        </a>
+            <a href="index.html">
+                <h1 id="logo"><i class="fas fa-paw"></i>Good Boy<i class="fas fa-paw"></i></h1>
+            </a>
             <ul class="menu">
                 <li>
                     <a class="active" href="index.html">About<i class="fas fa-home"></i></a>
@@ -27,7 +27,7 @@
                     <a href="#">Book App<i class="fas fa-calendar-alt"></i></a>
                 </li>
                 <li>
-                    <a  class="active" href="gallery.html">Gallery<i class="fas fa-images"></i></a>
+                    <a class="active" href="gallery.html">Gallery<i class="fas fa-images"></i></a>
                 </li>
                 <li>
                     <a href="#">Contact<i class="fas fa-phone"></i></a>
@@ -35,31 +35,35 @@
             </ul>
         </nav>
     </header>
-        <section id="photos">
-            <img src="assets/images/dog-brushing-teeth.jpeg" alt="A dog running with a brush in it's mouth">
-            <img src="assets/images/dog-chin-trim.jpeg" alt="A dog getting its chin hairs trimmed">
-            <img src="assets/images/dog-flower-collar.jpeg" alt="A dog with a flower collar">
-            <img src="assets/images/hair-brush.jpeg" alt="A dog getting its hair brushed">
-            <img src="assets/images/shampoo-dog.jpg" alt="A small dog with shampoo on it's head">
-            <img src="assets/images/dog-bed.jpeg" alt="A dog lying in a fluffy bed">
-            <img src="assets/images/shower-cap-dog.jpg" alt="A dog with a showercap and toothbrush">
-            <img src="assets/images/puppy-wink.jpeg" alt="A puppy winking">
-            <img src="assets/images/golden-retreiver.jpeg" alt="A happy golden retreiver">
-        </section>
+    <section id="photos">
+        <img src="assets/images/dog-brushing-teeth.jpeg" alt="A dog running with a brush in it's mouth">
+        <img src="assets/images/dog-chin-trim.jpeg" alt="A dog getting its chin hairs trimmed">
+        <img src="assets/images/dog-flower-collar.jpeg" alt="A dog with a flower collar">
+        <img src="assets/images/hair-brush.jpeg" alt="A dog getting its hair brushed">
+        <img src="assets/images/shampoo-dog.jpg" alt="A small dog with shampoo on it's head">
+        <img src="assets/images/dog-bed.jpeg" alt="A dog lying in a fluffy bed">
+        <img src="assets/images/shower-cap-dog.jpg" alt="A dog with a showercap and toothbrush">
+        <img src="assets/images/puppy-wink.jpeg" alt="A puppy winking">
+        <img src="assets/images/golden-retreiver.jpeg" alt="A happy golden retreiver">
+    </section>
     <footer>
         <ul class="social-media">
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i>
                 </a>
             </li>
             <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter"></i></a>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
             </li>
         </ul>
     </footer>
