--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar respond" >
             <a href="index.html">
                 <h1 id="logo"><i class="fas fa-paw"></i>Good Boy<i class="fas fa-paw"></i></h1>
             </a>
@@ -27,7 +27,7 @@
                     <a href="#">Book App<i class="fas fa-calendar-alt"></i></a>
                 </li>
                 <li>
-                    <a class="active" href="gallery.html">Gallery<i class="fas fa-images"></i></a>
+                    <a href="gallery.html">Gallery<i class="fas fa-images"></i></a>
                 </li>
                 <li>
                     <a href="#">Contact<i class="fas fa-phone"></i></a>
@@ -42,7 +42,7 @@
     </section>
     <section>
         <div class="flex-container-left">
-            <div id="about-us">
+            <div id="about-us" class="respond">
                 <h2> About Us</h2>
                 <p>Good Boy Grooming Studios has been caring for your furry friends since it's establishment in 2006.
                 </p>
@@ -58,7 +58,7 @@
                 </p>
                 </p>
             </div>
-            <div id="about-image">
+            <div id="about-image" class="respond">
             </div>
         </div>
     </section>
