Fix responsive design in css and html for index and gallery pages, Add structure to form

--- a/form-dump.html
+++ b/form-dump.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar" >
             <a href="index.html">
                 <h1 id="logo"><i class="fas fa-paw"></i>Good Boy<i class="fas fa-paw"></i></h1>
             </a>
@@ -27,26 +27,14 @@
                     <a href="#">Book App<i class="fas fa-calendar-alt"></i></a>
                 </li>
                 <li>
-                    <a class="active" href="gallery.html">Gallery<i class="fas fa-images"></i></a>
-                </li>
-                <li>
-                    <a href="#">Contact<i class="fas fa-phone"></i></a>
+                    <a href="gallery.html">Gallery<i class="fas fa-images"></i></a>
                 </li>
             </ul>
         </nav>
     </header>
-    <section id="photos">
-        <div class="gallery">
-            <div class="photo"><img src="assets/images/dog-flower-collar.jpeg" alt="A dog with a flower collar"></div>
-            <div class="photo"><img src="assets/images/dog-bed.jpeg" alt="A dog lying in a fluffy bed"></div>
-            <div class="photo"><img src="assets/images/shower-cap-dog.jpg" alt="A dog with a showercap and toothbrush"></div>
-            <div class="photo"><img src="assets/images/hair-brush.jpeg" alt="A dog getting its hair brushed"></div>
-            <div class="photo"><img src="assets/images/dog-chin-trim.jpeg" alt="A dog getting its chin hairs trimmed"></div>
-            <div class="photo"><img src="assets/images/shampoo-dog.jpg" alt="A small dog with shampoo on it's head"></div>
-            <div class="photo"><img src="assets/images/golden-retreiver.jpeg" alt="A happy golden retreiver"></div>
-            <div class="photo"><img src="assets/images/dog-brushing-teeth.jpeg" alt="A dog running with a brush in it's mouth"></div>
-        </div>
-    </section>
+   <section>
+       <h1>Thank you, you will receive an email shortly</h1>
+   </section>
     <footer>
         <ul class="social-media">
             <li>
