--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <nav class="navbar respond" >
+        <nav class="navbar" >
             <a href="index.html">
                 <h1 id="logo"><i class="fas fa-paw"></i>Good Boy<i class="fas fa-paw"></i></h1>
             </a>
@@ -24,13 +24,10 @@
                     <a class="active" href="index.html">About<i class="fas fa-home"></i></a>
                 </li>
                 <li>
-                    <a href="#">Book App<i class="fas fa-calendar-alt"></i></a>
+                    <a href="form.html">Book App<i class="fas fa-calendar-alt"></i></a>
                 </li>
                 <li>
                     <a href="gallery.html">Gallery<i class="fas fa-images"></i></a>
-                </li>
-                <li>
-                    <a href="#">Contact<i class="fas fa-phone"></i></a>
                 </li>
             </ul>
         </nav>
@@ -42,46 +39,50 @@
     </section>
     <section>
         <div class="flex-container-left">
-            <div id="about-us" class="respond">
-                <h2> About Us</h2>
-                <p>Good Boy Grooming Studios has been caring for your furry friends since it's establishment in 2006.
-                </p>
-                <br>
-
-                <p>We offer a number of top notch services to ensure your beloved pet is always looking, and feeling,
-                    their best.</p>
-                <br>
-                <p>We cater to any and all breed size and have extensive knowledge on how to care for those pooches who
-                    are getting on in years or who may typically have some difficulty in a grooming environment. To
-                    enquire further about our range of services please contact us. Alternatively, to book an appointment
-                    for your dog please fill out an appointment form on the next page.
-                </p>
-                </p>
+            <div id="about-us" class="mobile-layout">
+                <div class="mobile-padding">
+                    <h2> About Us</h2>
+                    <p>Good Boy Grooming Studios has been caring for your furry friends since it's establishment in 2006.
+                    </p>
+                    <br>
+    
+                    <p>We offer a number of top notch services to ensure your beloved pet is always looking, and feeling,
+                        their best.</p>
+                    <br>
+                    <p>We cater to any and all breed size and have extensive knowledge on how to care for those pooches who
+                        are getting on in years or who may typically have some difficulty in a grooming environment. To book an appointment
+                        for your dog please fill out an appointment form on the next page.
+                    </p>
+                    </p> 
+                </div>
             </div>
-            <div id="about-image" class="respond">
+            <div id="about-image" class="mobile-image">
             </div>
         </div>
     </section>
     <section>
         <div class="flex-container-right">
-            <div id="services">
-                <h2>Services</h2>
-                <ul class="small-text" id="services-list">
-                    <li>Full Groom</li>
-                    <li>De-Shedding Wash</li>
-                    <li>Puppy's First Groom</li>
-                    <li>Pawdicure (Nail Trim)</li>
-                    <li>Everyday Coat Care</li>
-                    <li>Doggy Dental</li>
-                    <li>Please call to discuss our range of Wedding services</li>
-                </ul>
-            </div>
-            <div id="services-image"></div>
+                <div id="services" class="mobile-layout">
+                    <div class="mobile-padding">
+                        <h2>Services</h2>
+                        <ul class="small-text" id="services-list">
+                            <li>Full Groom</li>
+                            <li>De-Shedding Wash</li>
+                            <li>Puppy's First Groom</li>
+                            <li>Pawdicure (Nail Trim)</li>
+                            <li>Everyday Coat Care</li>
+                            <li>Doggy Dental</li>
+                            <li>Please call to discuss our range of Wedding services</li>
+                        </ul>
+                    </div>
+                </div>
+            <div id="services-image" class="mobile-image"></div>
         </div>
     </section>
     <section>
         <div class="flex-container-left">
-            <div class="small-text" id="puppy-groom">
+            <div class="small-text mobile-layout" id="puppy-groom">
+                <div class="mobile-padding">
                 <h2> Puppy's First Groom</h2>
                 <p>
                     There are many dogs who find the grooming process stressful. Often, this is because the first groom
@@ -92,8 +93,9 @@
                 <p>The Puppy's First Groom package takes extra time for your pup to acclimate to the grooming studio and
                     all its sounds and smells. The Puppy's First Groom package also includes the use of our whisper blow
                     dryers and Puppy skin friendly shampoos</p>
+                </div>
             </div>
-            <div id="puppy-bath-image">
+            <div id="puppy-bath-image" class="mobile-image">
             </div>
     </section>
     <footer>
