Fix and style form and form dump

--- a/form-dump.html
+++ b/form-dump.html
@@ -32,8 +32,10 @@
             </ul>
         </nav>
     </header>
-   <section>
+   <section id="thankyou">
+       <div class="thankyou-message">
        <h1>Thank you, you will receive an email shortly</h1>
+       </div>
    </section>
     <footer>
         <ul class="social-media">
