--- a/gallery.html
+++ b/gallery.html
@@ -21,16 +21,13 @@
             </a>
             <ul class="menu">
                 <li>
-                    <a class="active" href="index.html">About<i class="fas fa-home"></i></a>
+                    <a href="index.html">About<i class="fas fa-home"></i></a>
                 </li>
                 <li>
-                    <a href="#">Book App<i class="fas fa-calendar-alt"></i></a>
+                    <a href="form.html">Book App<i class="fas fa-calendar-alt"></i></a>
                 </li>
                 <li>
                     <a class="active" href="gallery.html">Gallery<i class="fas fa-images"></i></a>
-                </li>
-                <li>
-                    <a href="#">Contact<i class="fas fa-phone"></i></a>
                 </li>
             </ul>
         </nav>
