fixed validation errors in html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <meta name="description" content="Dog grooming studio for dog owners in Kilkenny, Ireland">
     <meta name="keywords"
         content="Dog Grooming Service, Dog Wash, Canine Clippers, Shedding Wash, Pawdicure, Puppy Bath, Kilkenny, Ireland">
+    <!-- import stylsheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Good Boy Grooming Studios</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar" >
+        <!-- navigation menu -->
+        <nav class="navbar">
+            <!-- site logo -->
             <a href="index.html">
                 <h1 id="logo"><i class="fas fa-paw"></i>Good Boy<i class="fas fa-paw"></i></h1>
             </a>
@@ -31,28 +34,32 @@
             </ul>
         </nav>
     </header>
-    <section id="hero-outer">
+    <!-- hero image -->
+    <div id="hero-outer">
         <div id="hero-image">
 
         </div>
-    </section>
+    </div>
     <section>
         <div class="flex-container-left">
             <div id="about-us" class="mobile-layout">
                 <div class="mobile-padding">
                     <h2> About Us</h2>
-                    <p>Good Boy Grooming Studios has been caring for your furry friends since it's establishment in 2006.
+                    <p>Good Boy Grooming Studios has been caring for your furry friends since it's establishment in
+                        2006.
                     </p>
                     <br>
-    
-                    <p>We offer a number of top notch services to ensure your beloved pet is always looking, and feeling,
+
+                    <p>We offer a number of top notch services to ensure your beloved pet is always looking, and
+                        feeling,
                         their best.</p>
                     <br>
-                    <p>We cater to any and all breed size and have extensive knowledge on how to care for those pooches who
-                        are getting on in years or who may typically have some difficulty in a grooming environment. To book an appointment
+                    <p>We cater to any and all breed size and have extensive knowledge on how to care for those pooches
+                        who
+                        are getting on in years or who may typically have some difficulty in a grooming environment. To
+                        book an appointment
                         for your dog please fill out an appointment form on the next page.
                     </p>
-                    </p> 
                 </div>
             </div>
             <div id="about-image" class="mobile-image">
@@ -61,20 +68,20 @@
     </section>
     <section>
         <div class="flex-container-right">
-                <div id="services" class="mobile-layout">
-                    <div class="mobile-padding">
-                        <h2>Services</h2>
-                        <ul class="small-text" id="services-list">
-                            <li>Full Groom</li>
-                            <li>De-Shedding Wash</li>
-                            <li>Puppy's First Groom</li>
-                            <li>Pawdicure (Nail Trim)</li>
-                            <li>Everyday Coat Care</li>
-                            <li>Doggy Dental</li>
-                            <li>Please call to discuss our range of Wedding services</li>
-                        </ul>
-                    </div>
+            <div id="services" class="mobile-layout">
+                <div class="mobile-padding">
+                    <h2>Services</h2>
+                    <ul class="small-text" id="services-list">
+                        <li>Full Groom</li>
+                        <li>De-Shedding Wash</li>
+                        <li>Puppy's First Groom</li>
+                        <li>Pawdicure (Nail Trim)</li>
+                        <li>Everyday Coat Care</li>
+                        <li>Doggy Dental</li>
+                        <li>Please call to discuss our range of Wedding services</li>
+                    </ul>
                 </div>
+            </div>
             <div id="services-image" class="mobile-image"></div>
         </div>
     </section>
@@ -82,21 +89,26 @@
         <div class="flex-container-left">
             <div class="small-text mobile-layout" id="puppy-groom">
                 <div class="mobile-padding">
-                <h2> Puppy's First Groom</h2>
-                <p>
-                    There are many dogs who find the grooming process stressful. Often, this is because the first groom
-                    was a frightening experience. Here at Good Boy Grooming Studios we offer a Puppy's First Groom
-                    special to make that first grooming experience a positive one.
-                </p>
-                <br>
-                <p>The Puppy's First Groom package takes extra time for your pup to acclimate to the grooming studio and
-                    all its sounds and smells. The Puppy's First Groom package also includes the use of our whisper blow
-                    dryers and Puppy skin friendly shampoos</p>
+                    <h2> Puppy's First Groom</h2>
+                    <p>
+                        There are many dogs who find the grooming process stressful. Often, this is because the first
+                        groom
+                        was a frightening experience. Here at Good Boy Grooming Studios we offer a Puppy's First Groom
+                        special to make that first grooming experience a positive one.
+                    </p>
+                    <br>
+                    <p>The Puppy's First Groom package takes extra time for your pup to acclimate to the grooming studio
+                        and
+                        all its sounds and smells. The Puppy's First Groom package also includes the use of our whisper
+                        blow
+                        dryers and Puppy skin friendly shampoos</p>
                 </div>
             </div>
             <div id="puppy-bath-image" class="mobile-image">
             </div>
+        </div>
     </section>
+    <!-- Footer containing social media icons -->
     <footer>
         <ul class="social-media">
             <li>
