switched section to main to fix validation error

--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
             </ul>
         </nav>
     </header>
-    <section id="photos">
+    <main id="photos">
         <div class="gallery">
             <div class="photo"><img src="assets/images/dog-flower-collar.jpeg" alt="A dog with a flower collar"></div>
             <div class="photo"><img src="assets/images/dog-bed.jpeg" alt="A dog lying in a fluffy bed"></div>
@@ -43,7 +43,7 @@
             <div class="photo"><img src="assets/images/golden-retreiver.jpeg" alt="A happy golden retreiver"></div>
             <div class="photo"><img src="assets/images/dog-brushing-teeth.jpeg" alt="A dog running with a brush in it's mouth"></div>
         </div>
-    </section>
+    </main>
     <footer>
         <ul class="social-media">
             <li>
